syntax = "proto3";

package wealth;

option csharp_namespace = "Wealth.BuildingBlocks";

message InstrumentIdProto {
  GuidProto id = 1;
}

message GuidProto {
  string value = 1;
}

message MoneyProto {
  CurrencyIdProto currency_id = 1;
  DecimalProto price = 2;
}

message CurrencyIdProto {
  string code = 1;
}

message DecimalProto {
  int64 units = 1;
  sfixed32 nanos = 2;
}

message ISINProto {
  string value = 1;
}

enum InstrumentTypeProto {
  InstrumentTypeProto_STOCK = 0;
  InstrumentTypeProto_BOND = 1;
}
